--- a/data/posts/15-06-2017-c4p-time.markdown
+++ b/data/posts/15-06-2017-c4p-time.markdown
@@ -7,7 +7,7 @@ Para continuar este ano, decidimos nos concentrar em conteúdo. ** Estamos à pr
 
 <div class="text-center">
 <a href="https://docs.google.com/forms/d/1uFRfd34CyjAHJ9A6-U3RHK3JudKB6ZYHqQKrb5r4xJw" target="_blank" class="style-scope header-content" style="color: white; ">
-  <paper-button class="primary style-scope header-content x-scope paper-button-0" raised="" role="button" tabindex="0" animated="" aria-disabled="false" elevation="1">Submita sua proposta</paper-button>
+  <paper-button class="primary style-scope header-content x-scope paper-button-0" raised="" role="button" tabindex="0" animated="" aria-disabled="false" elevation="1">Submeta sua proposta</paper-button>
 </a>
 </div>
 
@@ -54,7 +54,7 @@ Call for Papers está aberto até o dia ** 31 de julho **
 
 <div class="text-center">
 <a href="https://docs.google.com/forms/d/1uFRfd34CyjAHJ9A6-U3RHK3JudKB6ZYHqQKrb5r4xJw" target="_blank" class="style-scope header-content" style="color: white; ">
-  <paper-button class="primary style-scope header-content x-scope paper-button-0" raised="" role="button" tabindex="0" animated="" aria-disabled="false" elevation="1">Submita sua proposta</paper-button>
+  <paper-button class="primary style-scope header-content x-scope paper-button-0" raised="" role="button" tabindex="0" animated="" aria-disabled="false" elevation="1">Submeta sua proposta</paper-button>
 </a>
 </div>
 
