Correção de escritas

--- a/data/posts/15-06-2017-c4p-time.markdown
+++ b/data/posts/15-06-2017-c4p-time.markdown
@@ -60,7 +60,7 @@ Call for Papers está aberto até o dia ** 31 de julho **
 
 <br/>
 
-** OBSERVAÇÃO: ** Sua proposta será analisada e caso sua palestra for selecionada, entraremos em contato para mais detalhes, ** Resultados na primeira semana de Agosto **.
+** OBSERVAÇÃO: ** Sua proposta será analisada e caso sua palestra for selecionada, entraremos em contato para mais detalhes, ** Resultados nas primeiras semanas de Agosto **.
 
 
 Duvidas ou sugestões? nos envie um e-mail ✉️ [gdggoiania@gmail.com](mailto:gdggoiania@gmail.com)
